[workspace]
members = [
    "adder",
    "art",
    "backyard",
    "closures-and-iterators",
    "collections",
    "enums",
    "errors",
    "functions",
    "generics","guessing_game",
    "minigrep",
    "my_crate",
    "ownership",
    "restaurant",
    "slices",
    "structs",
    "testing-crates-1",
    "tz",
    "variables"
]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package.minigrep]
opt-level = 2

[profile.release-lto]
inherits = "release"
lto = true
